--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,6 +10,7 @@
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+@custom-variant dark (&:is(.dark *));
 
 @theme inline {
     --radius-sm: calc(var(--radius) - 4px);
@@ -57,7 +58,7 @@
     --card-foreground: oklch(0.145 0 0);
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.145 0 0);
-    --primary: oklch(45.518% 0.26462 265.66);
+    --primary: oklch(45.734% 0.26895 278.602);
     --primary-foreground: oklch(0.985 0 0);
     --secondary: oklch(0.97 0 0);
     --secondary-foreground: oklch(0.205 0 0);
@@ -85,13 +86,13 @@
 }
 
 .dark {
-    --background: oklch(0.145 0 0);
+    --background: #10042A;
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.205 0 0);
     --card-foreground: oklch(0.985 0 0);
     --popover: oklch(0.205 0 0);
     --popover-foreground: oklch(0.985 0 0);
-    --primary: oklch(0.922 0 0);
+    --primary: oklch(45.734% 0.26895 278.602);
     --primary-foreground: oklch(0.205 0 0);
     --secondary: oklch(0.269 0 0);
     --secondary-foreground: oklch(0.985 0 0);
@@ -152,6 +153,24 @@
         max-width: 96rem /* 1536px */;
     }
 }
+
+/* Chrome autofill fix for dark mode */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
+    box-shadow: 0 0 0 1000px transparent inset !important;
+    background-color: transparent !important;
+
+    /* Force readable text color */
+    -webkit-text-fill-color: var(--color-foreground) !important;
+
+    /* prevent chrome from re-adding bg */
+    transition: background-color 9999s ease-in-out 0s !important;
+}
+
+
 
 /* * {
     outline: 1px solid red;
