--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -170,6 +170,18 @@ input:-webkit-autofill:active {
     transition: background-color 9999s ease-in-out 0s !important;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none; /* IE & Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+[x-cloak] {
+    display: none !important;
+}
 
 
 /* * {
